--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AnnouncementsAndWarnings/AnnouncementsAndWarnings.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AnnouncementsAndWarnings/AnnouncementsAndWarnings.cshtml
@@ -1,54 +1,67 @@
-﻿@using Feature.Wealth.Component.Models.Tab
-@model TabModel
+﻿@using Feature.Wealth.Component.Models.AnnouncementsAndWarnings
+@model AnnouncementsAndWarningsModel
 
-@{
-    var placeholderKeyPrefix = "tab"; //placeholderKey 如tab1、tab2
+@if (Model == null)
+{
+    return;
 }
 
-<div class="c-section c-section--tab">
-    <div class="l-wrap">
+@if (!string.IsNullOrEmpty(Model.Content))
+{
+    <div class="c-section">
         <div class="c-section__content">
-            <div class="c-tab c-tab--wide" data-tab="true">
-                <div class="c-tab__header">
-                    <ul class="c-tab__navs">
-                        @for (var i = 0; i < Model.SubItems.Count(); i++)
-                        {
-                            var title = Html.Sitecore().Field(SubItemTemplates.Title.ToString(), Model.SubItems[i]);
-                            var active = i == 0 ? "is-active" : string.Empty;
+            <!-- .c-list--num: 純數字樣式
+            .c-list--bracketNum: 數字+刮號樣式
+            .c-list--disc: 實心圓點樣式
+            .c-list--circle: 空心圓點樣式 -->
+            <ol class="c-list c-list--num">
 
-                            <li>
-                                <a href="#" class="c-tab__item @active" target="_self" title="@title" data-tab-target="tab-@(i + 1)">@title</a>
-                            </li>
-                        }
+                    @Html.Sitecore().Field(Templates.AnnouncementsandWarnings.Fields.Content.ToString(), Model.Item)
+            
+            </ol>
+        </div>
+    </div>
+}
+@if (!string.IsNullOrEmpty(Model.MainTitle) || !string.IsNullOrEmpty(Model.Description) || !string.IsNullOrEmpty(Model.Image))
+{
+    <section class="c-section">
+        <div class="l-wrap">
+            <div class="c-section__content">
+                <div class="l-feature l-feature--sm">
+                    <ul class="l-feature__list">
+                        <li class="l-feature__item">
+                            <div class="c-feature c-feature--join c-feature--personalize">
+                                <div class="c-feature__content u-center">
+                                    <h3 class="c-feature__title">@Model.MainTitle</h3>
+                                    <p class="c-feature__desc">@Html.Sitecore().Field(Templates.AnnouncementsandWarnings.Fields.Description.ToString(), Model.Item)</p>
+                                </div>
+                                <div class="c-feature__plate">
+                                    <img src="@Model.Image" srcset="" alt="" class="c-feature__img">
+                                </div>
+                            </div>
+                        </li>
                     </ul>
-                    <div class="c-tab__collapse">
-                        <a href="#" class="c-tab__switch"></a>
-                        <div class="c-tab__dropdown">
-                            @for (var i = 0; i < Model.SubItems.Count(); i++)
-                            {
-                                var title = Html.Sitecore().Field(SubItemTemplates.Title.ToString(), Model.SubItems[i]);
-                                var active = i == 0 ? "is-active" : string.Empty;
-
-                                <a href="#" class="c-tab__clone @active" target="_self" title="@title" data-tab-target="tab-@(i + 1)">@title</a>
-                            }
+                </div>
+            </div>
+        </div>
+    </section>
+}
+@if (!string.IsNullOrEmpty(Model.WarningTitle) || !string.IsNullOrEmpty(Model.WarningContent))
+{
+    <div class="c-section">
+        <div class="l-wrap">
+            <div class="c-section__content">
+                <div class="c-collapse c-collapse--warning" data-collapse="true">
+                    <div class="c-collapse__head" data-collapse-button="true">
+                        <span>@Model.WarningTitle</span>
+                    </div>
+                    <div class="c-collapse__content" data-collapse-content="true">
+                        <div class="c-collapse__inner">
+                            @Html.Sitecore().Field(Templates.AnnouncementsandWarnings.Fields.WarningContent.ToString(), Model.Item)
                         </div>
                     </div>
                 </div>
-                <!-- is-active: 作用中的項目 -->
-                @for (var i = 0; i < Model.SubItems.Count(); i++)
-                {
-                    var item = Model.SubItems[i];
-                    var active = i == 0 ? "is-active" : string.Empty;
-                    string num = (i + 1).ToString();
-
-                    <div class="c-tab__panel @active" data-tab-panel-id="tab-@num">
-                        @Html.Sitecore().Placeholder("AnnouncementsTab" + num)
-                        @Html.Sitecore().Placeholder("MoreAnnouncementsTab" + num)
-                        @Html.Sitecore().Placeholder("FileDownloadTab" + num)
-                        @Html.Sitecore().Placeholder("WarningsTab" + num)
-                    </div>
-                }
             </div>
         </div>
     </div>
-</div>
+}
