--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -145,6 +145,7 @@
             "/themes/js/extensions/highcharts-initialize.min.js",
             "/themes/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js",
             "/themes/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.zh-TW.min.js",
+            "/themes/vendor/moment/moment.min.js",
             "/themes/vendor/noUiSlider/nouislider.min.js",
             "/themes/vendor/wnumb/wNumb.min.js",
             "/themes/js/filter.min.js",
